fix table color dark mode

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -103,3 +103,7 @@ pre, code {
 img {
   width: 100%;
 }
+
+tr {
+  background: var(--clr-secondary);
+}
